Check if exists before adding new one to DB
